Build e deploy da aplicação

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,7 +5,7 @@
             alt="logo da aplicação mattec">
         <span class="spacer"></span>
         <button mat-button (click)="onTelaPrincipal()">Cursos</button>
-        <button mat-button>Sobre</button>
+        <button mat-button (click)="onTelaSobre()">Sobre</button>
         <button mat-raised-button color="primary">CADASTRE-SE</button>
         <button mat-stroked-button>Login</button>
 
